# activelearning

./: .gitattributes  .gitignore  Agent.py  README.md  RLmodels.py  acquisition.py  activeLearner.py  activelearning.py  aptamers.py  config_test.yaml  dataset.py  env.py  eval_al.py  eval_gflownet.py  gflownet.py  install.sh  main.py  models.py  oracle.py  oracles.py  prereq_cluster_cpu.sh  prereq_cluster_gpu.sh  prereq_python.sh  processExperiments.py  proxy.py  pyproject.toml  querier.py  record.txt  replay_buffer.py  requirements.txt  sampler.py  test.py  test_branin.ipynb  test_faenet.ipynb  test_gflownet.ipynb  test_hartmann.ipynb  test_multifidelity.ipynb  test_ocp.ipynb  test_surrogate.ipynb  utils.py
activelearning/: activelearning.ipynb
activelearning/acquisition/: acquisition.py  objective.py
activelearning/config/: test_hartmann.yaml
activelearning/dataset/: dataset.py  grid.py  ocp.py
activelearning/oracle/: ocp.py  oracle.py
activelearning/sampler/: proxy.py  sampler.py
activelearning/selector/: selector.py
activelearning/surrogate/: gp_kernels.py  gp_models.py  gp_surrogate.py  surrogate.py
activelearning/utils/: common.py  helper_functions.py  logger.py  logger_activelearning.py  ocp.py  plotter.py
config/: dataset.yaml  debug_test.yaml  default.yaml  kg_test.yaml  main.yaml  mf_amp.yaml  mf_amp_test.yaml  mf_aptamers.yaml  mf_branin.yaml  mf_corners_oracle_only.yaml  mf_dkl.yaml  mf_ea.yaml  mf_gp_test.yaml  mf_hartmann.yaml  mf_ip.yaml  mf_mols_ea.yaml  mf_mols_ip.yaml  mf_rosenbrock.yaml  ppo_amp.yaml  ppo_dna.yaml  ppo_test.yaml  random_amp.yaml  random_aptamers.yaml  random_sampler.yaml  sf_amp.yaml  sf_aptamers.yaml  sf_branin.yaml  sf_dkl.yaml  sf_ea.yaml  sf_hartmann.yaml  sf_ip.yaml  sf_mols_ea.yaml  sf_mols_ip.yaml  sf_rosenbrock.yaml  sf_test.yaml  test_branin.yaml  test_hartmann.yaml  test_ocp.yaml  test_ocp_const.yaml  test_ocp_diff.yaml
config/acquisition/: botorch.yaml  botorch_ei.yaml  botorch_mc.yaml  botorch_mve.yaml  botorch_nei.yaml  botorch_ucb.yaml
config/dataset/: branin.yaml  dataset.yaml  grid.yaml  hartmann.yaml  ocp.yaml  ocp_diff.yaml
config/env/: amp.yaml  aptamers.yaml  base.yaml  catalyst.yaml  ccube.yaml  crystal_surface.yaml  grid.yaml  mols.yaml
config/experiments/: gfn.yaml  greedy.yaml
config/filter/: filter.yaml
config/gflownet/: gflownet.yaml  ppo.yaml  random.yaml  trajectorybalance.yaml
config/logger/: base.yaml  comet.yaml  wandb.yaml
config/model/: dropout_regressor.yaml  gp.yaml  mf_mlp.yaml  mlm_cnn.yaml  mlm_transformer.yaml  mlp.yaml  multi_fidelity_mlp.yaml  regressive.yaml  transformer.yaml
config/network/: mlp.yaml  transformer.yaml
config/noise/: normal_mu0_sigma0.1.yaml  normal_mu0_sigma0.2.yaml  normal_mu0_sigma0.3.yaml
config/oracle/: amp.yaml  amp1.yaml  amp_fid1.yaml  amp_fid2.yaml  aptamers1.yaml  aptamers_mlp.yaml  aptamers_nn.yaml  aptamers_nupack.yaml  branin.yaml  branin1.yaml  branin2.yaml  branin3.yaml  corners.yaml  corners_fid1.yaml  corners_fid2.yaml  corners_fid3.yaml  ea_fid1.yaml  ea_fid2.yaml  ea_fid3.yaml  hartmann.yaml  hartmann1.yaml  hartmann2.yaml  hartmann3.yaml  ip_fid1.yaml  ip_fid2.yaml  ip_fid3.yaml  mols_ea1.yaml  mols_ea2.yaml  mols_ea3.yaml  mols_ip1.yaml  mols_ip2.yaml  mols_ip3.yaml  multifidelity.yaml  ocp.yaml  rosenbrock1.yaml  rosenbrock2.yaml  rosenbrock3.yaml
config/plotter/: cime4r_base.yaml  cime4r_branin.yaml  cime4r_ocp.yaml
config/proxy/: base.yaml  botorch_ucb.yaml  dropout_regressor.yaml  gp_ucb.yaml  grid_corners.yaml  mes_gp.yaml  mes_svgp.yaml  mf_kg.yaml  mf_mes.yaml  mf_mes_dkl.yaml  mf_mes_gp.yaml  mf_mes_oracle.yaml  mf_mes_proxy.yaml  mf_mes_svgp.yaml  ucb.yaml
config/regressor/: dkl.yaml  dropout_regressor.yaml  mf_dkl.yaml  mf_dkl_linear.yaml  mf_exact_dkl.yaml  mf_gp.yaml  mf_svgp.yaml  sf_dkl.yaml  sf_exact_dkl.yaml  sf_gp.yaml  sf_svgp.yaml
config/sampler/: crystal_gflownet.yaml  gflownet.yaml  greedy.yaml  random.yaml  (+2 more)
config_legacy/: mf_aptamers.yaml  mf_hartmann.yaml  sf_branin.yaml  sf_mols_ea.yaml  sf_test.yaml
env/: amp.py  aptamers.py  base.py  grid.py  mfenv.py  mols.py
main-new-al/: acquisition.py  proxy.py  querier.py
model/: base.py  base_surrogate.py  botorch_models.py  gp_models.py  inducing_point_allocator.py  lm_elements.py  masked_layers.py  metrics.py  mlm.py  mlp.py  multi_fidelity_mlp.py  regressive.py  regressor.py  rnn.py  shared_elements.py  utils.py
my_package/: activelearning.ipynb  activelearning.py  hartmann.ipynb
network/: mlp.py  utils.py
previous_code/: grid.py  main.py
proxy/: acquisition.py  aptamers_mlp.py  aptamers_nn.py  botorch_models.py  branin.py  dropout_regressor.py  hartmann.py  kg.py  mes.py  mf_acquisition.py  model.py  rosenbrock.py  toy_oracle.py  ucb.py
regressor/: dkl.py  exact_dkl.py  gp.py  regressor.py  svgp.py
sampler/: ppo.py  random_grid.py
scripts/: submit-branin.sh  submit-ocp-diff.sh  submit-ocp.sh
utils/: common.py  dkl_utils.py  eval_al_round.py  fidelity_distribution.py  logger.py  multifidelity_toy.py  selfies.py
(+217 files in other folders)
