[tool.poetry]
name = "activelearning"
version = "0.1.0"
description = "Multi-fidelity active learning with GFlowNets"
authors = ["Alex <alex.hernandez-garcia@mila.quebec>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# Base dependencies.
botorch = ">=0.10.0"
hydra-core = ">=1.3.2"
matplotlib = "*"
numpy = "*"
pandas = "*"
plotly = ">=5.17.0"
python = "^3.10"
six = ">=1.16.0"
torch = { version = "==2.0.1", source = "torch-cpu" }
torchtyping = ">=0.1.4"
tqdm = "*"
wandb = ">=0.15.11"

# Optional dependencies (extras)

# Dev extras
black = { version = ">=23.9.1", optional = true }
flake8 = { version = ">=6.1.0", optional = true }
isort = { version = ">=5.12.0", optional = true }
pylint = { version = ">=2.17.6", optional = true }
ipdb = { version = ">=0.13.13", optional = true }
jupyter = { version = ">=1.0.0", optional = true }
pytest = { version = ">=7.4.2", optional = true }
pytest-repeat = { version = ">=0.9.1", optional = true }
gflownet = { git = "https://github.com/alexhernandezgarcia/gflownet-dev", branch = "catalyst", optional = true }
# gflownet = { git = "https://github.com/alexhernandezgarcia/gflownet", branch = "activelearning", optional = true }
ocpmodels = { git = "https://github.com/RolnickLab/ocp.git", branch = "uncertainty", optional = true }

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "primary"

[[tool.poetry.source]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "primary"

[tool.poetry.extras]
base = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "ipdb",
    "jupyter",
]
all = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "ipdb",
    "jupyter",
    "gflownet",
    "ocpmodels",
]
dev = [
    "black",
    "flake8",
    "isort",
    "pylint",
    "ipdb",
    "jupyter",
    "gflownet",
    "ocpmodels",
    "pytest",
    "pytest-repeat",
]