[project]
name = "activelearning"
version = "0.1.0"
description = "Multi-fidelity active learning with GFlowNets"
authors = [
    {name = "alexhernandezgarcia", email = "alex.hernandez-garcia@mila.quebec"},
    {name = "nikita-0209"},
    {name = "ginihumer"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch >=0.10.0",
    "gflownet @ git+https://github.com/alexhernandezgarcia/gflownet.git",
    "hydra-core >=1.3.2",
    "matplotlib",
    "numpy >=1.26.4,<2.0.0",
    "pandas",
    "plotly >=5.17.0",
    "six >=1.16.0",
    "torch ==2.5.1",
    "torchtyping >=0.1.4",
    "tqdm",
    "wandb >=0.15.11",
]

[project.optional-dependencies]
dev = [
    "black >=23.9.1",
    "flake8 >=6.1.0",
    "isort >=5.12.0",
    "ipdb >=0.13.13",
    "jupyter >=1.0.0",
    "pylint >=2.17.6",
    "pytest >=7.4.2",
    "pytest-repeat >=0.9.1",
]

# IMPORTANT: during development, in order to be able to install gflownet from gflownet-dev,
# the line containing the dependency on gflownet from the public gflownet needs to be
# commented out.
materials = [
    "faenet @ git+https://github.com/RolnickLab/ocp.git@uncertainty",
    "gflownet @ git+https://github.com/alexhernandezgarcia/gflownet-dev.git@catalyst",
    "ocpmodels @ git+https://github.com/RolnickLab/ocp.git@uncertainty",
    "pymatgen ==2024.3.1",
    "pyshtools ==4.10.3",
    "pyxtal >=0.6.1",
    "torch_scatter >=2.1.2",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
